test/expected/explain_hb.out
explain short bool x
        ^
9: error: "short _Bool" is illegal for built-in type
